surefire config update and compiler release